2005-12-16  Matthias Clasen  <mclasen@redhat.com>

	*  glib/gmem.c (g_allocator_new): Don't return a pointer to
	a const struct, since apps expect to be able to modify it. 
	(#324179, J. Ali Harlow)

Tue Dec 13 10:13:32 2005  Tim Janik  <timj@imendio.com>

	* glib/gatomic.h: added g_atomic_pointer_set() and g_atomic_int_set()
	for systems where the initialization of atomic variables requires a
	write memory barrier.

2005-12-09  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.9.1 ===

2005-12-09  Alexander Larsson  <alexl@redhat.com>

	* glib/glist.h: 
	* glib/gslist.h:
	Use G_GNUC_WARN_UNUSED_RESULT on list functions that return
	the whole list.

2005-12-08  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates

2005-12-07  Martyn Russell  <martyn@imendio.com>

	* glib/gasyncqueue.c:
	- Call g_queue_insert_sorted() instead of duplicating the code.
	- Call g_queue_sort() instead of duplicating the code.
	- Invert sort function results to make sure the same sort function
	gives the same results across glist, gslist, gqueue and
	gasyncqueue.

	* tests/asyncqueue-test.c:
	- Updated the sort function to reflect the example in the
	documentation for gasyncqueue.c.

2005-12-07  Martyn Russell  <martyn@imendio.com>

	* docs/reference/glib/glib-sections.txt:
	* docs/reference/glib/tmpl/linked_lists_double.sgml:
	* docs/reference/glib/tmpl/linked_lists_single.sgml:
	* glib/glist.[ch]: 
	* glib/gslist.[ch]: 
	- Added g_list_insert_sorted_with_data () and
	g_slist_insert_sorted_with_data ().
	- Removed the extra check in g_list_sort() and g_slist_sort() for
	GCompareDataFunc vs. GCompareFunc.
 	
2005-12-07  Tor Lillqvist  <tml@novell.com>

	* glib-gettextize.in: Look up prefix at run-time on Win32,
	assuming the standard directory structure with glib-gettextize in
	$prefix/bin.

2005-12-06  Matthias Clasen  <mclasen@redhat.com>

	* glib/gmem.h: Exempt GTK+ from the mem chunk deprecation, since